some minor organization and color text support

--- a/_posts/2023-03-23-farcalls.md
+++ b/_posts/2023-03-23-farcalls.md
@@ -3,8 +3,7 @@ layout: post
 title: Chasing far calls
 category: f15-se2
 ---
-
-(This is a post on the subject of my hobby project, which is recreating the C source code for the 1989 game [F-15 Strike Eagle II]({% post_url 2022-06-05-origins %}) by reverse engineering the original binaries.)
+<small>(_This post is part of a [series]({% link category/f15-se2.html %}) on the subject of my hobby project, which is recreating the C source code for the 1989 game [F-15 Strike Eagle II]({% post_url 2022-06-05-origins %}) by reverse engineering the original binaries._)</small>
 
 I recently got the mzdiff tool in [dostrace](https://github.com/neuviemeporte/dostrace) to a point where I can give it one of the game executables and my C reimplementation executable, and it will compare them instruction-by-instruction (allowing for differences in file layout, particularly data and code addresses), so I sat down and started implementing the `main()` function of `START.EXE`, the first actual game exe which shows the title screen, lets you select a pilot, a mission, difficulty level, before showing you the targets and exiting (the actual flight is handled by `EGAME.EXE`). So I'm reviewing the disassembly in IDA and writing my C code based off it, got some instructions to match, which mzdiff helpfully shows, so I'm psyched. Then I hit this instruction:
 
