--- a/_posts/2023-05-17-compiler.md
+++ b/_posts/2023-05-17-compiler.md
@@ -3,6 +3,7 @@ layout: post
 title: Hunting for the Right Compiler, Part 1
 category: f15-se2
 ---
+<small>(_This post is part of a [series]({% link category/f15-se2.html %}) on the subject of my hobby project, which is recreating the C source code for the 1989 game [F-15 Strike Eagle II]({% post_url 2022-06-05-origins %}) by reverse engineering the original binaries._)</small>
 
 Back when I was having an [initial look]({% post_url 2022-12-08-firstlook %}) around the game, I was pretty excited to find a [C runtime library](https://en.wikipedia.org/wiki/C_standard_library) copyright string embedded in the game's executables:
 
@@ -173,7 +174,7 @@ if (timerCounter >= timeout) {
 
 Compile, compare... Whoopsy!
 
-```
+<pre>
 1000:0100/010100: mov byte [0x76e], 0x0            ~= 1000:0100/010100: mov byte [0x5cf], 0x0
 1000:0105/010105: cmp byte [0x76e], 0x78           ~= 1000:0105/010105: cmp byte [0x5cf], 0x78
 1000:010a/01010a: jnb 0x11e (down)                 ~= 1000:010a/01010a: jnb 0x11a (down)
@@ -181,12 +182,12 @@ Compile, compare... Whoopsy!
 1000:0111/010111: or ax, ax                        == 1000:0111/010111: or ax, ax
 1000:0113/010113: jnz 0x11c (down)                 ~= 1000:0113/010113: jnz 0x105 (up)
 1000:0115/010115: call far 0x16b50c7f              ~= 1000:0115/010115: call far 0x11c1025b
-1000:011a/01011a: jmp short 0x11e (down)           != 1000:011a/01011a: cmp byte [0x5cf], 0x78
+<r>1000:011a/01011a: jmp short 0x11e (down)           != 1000:011a/01011a: cmp byte [0x5cf], 0x78</r>
 ERROR: Instruction mismatch in routine main at 1000:011a/01011a: jmp short 0x11e != 1000:011a/01011a: cmp byte [0x5cf], 0x78
 --- Context information for 10 additional instructions after mismatch location:
 1000:011c/01011c: jmp short 0x105 (up)             ~= 1000:011f/01011f: jb 0x172 (down)
 1000:011e/01011e: cmp byte [0x76e], 0x78           != 1000:0121/010121: call far 0x11c101ed
-```
+</pre>
 
 The compiler eliminates the superfluous intermediate jump to `0x11c` which jumps back up to `0x105` to continue with the next iteration of the loop and just jumps directly to `0x105` because that's more efficient. The end result is the same. But the comparison is off and I was aiming for perfection! Worse still, it throws off my tool that I spent two months creating and I'll be damned before I give up and revert to manual diffing. 😉
 
