--- a/_posts/2023-05-18-compiler2.md
+++ b/_posts/2023-05-18-compiler2.md
@@ -3,7 +3,6 @@ layout: post
 title: Hunting for the Right Compiler, Part 2
 category: f15-se2
 ---
-
 (...continued from  [Part 1]({% post_url 2023-05-17-compiler %}))
 
 (dramatic narrator voice) _when we left our intrepid hero, he was scratching his head, puzzled, over how to get an ancient C compiler to emit just the right instructions to move his game reverse engineering project forward. Disappointed by Microsoft compilers, his gaze now turned toward Borland, the last free kingdom of Men..._ Wait, what???
@@ -16,19 +15,19 @@ Keeping the 1989 date in mind, I picked the closest version of Turbo C, which wo
 
 {% highlight cpp %}
     timerCounter = 0;
-waitForKey1:
+waitForKey:
     if (timerCounter < TIMEOUT) {
         if (check_keybuf() == 0) {
             getkey();
-            goto keyOrTimeout1;
+            goto keyOrTimeout;
         }
-        goto waitForKey1;
+        goto waitForKey;
     }
-    keyOrTimeout1:
-    if (timerCounter < MPS_TIMEOUT -1) { /* ... */ }
+keyOrTimeout:
+    if (timerCounter < MPS_TIMEOUT -1) { ...
 {% endhighlight %}
 
-I could not get it to match with any variant of a `for`, `while` or `do..while`-based loop. Anyway, the generated code is the following:
+I could not get it to emit matching code with any variant of a `for`, `while` or `do..while`-based loop, but I can live with the `goto`s. Anyway, the generated code is the following:
 
 {% highlight nasm %}
 00000039  C6066C0300        mov byte [0x36c],0x0
@@ -43,9 +42,9 @@ I could not get it to match with any variant of a `for`, `while` or `do..while`-
 00000053  803E6C0377        cmp byte [0x36c],0x78
 {% endhighlight %}
 
-With `-O`, this is optimized to to a jump directly up to `0x3e` from `0x4a`, just like MSC does it. So the Borland compiler can generate code that's just as good as the Microsoft one, but it gives the user more control over the amount of optimizations that are desired. So, that's it then? We're home free? Well, unfortunately not:
+With `-O`, this is optimized to to a jump directly up to `0x3e` from `0x4a`, just like MSC does regarless of the options used. So the Borland compiler can generate code that's just as good as the Microsoft one, but it gives the user more control over the amount of optimizations that are desired. So, that's it then? We're home free? Well, unfortunately not:
 
-```
+<pre>
 ninja@dell:eaglestrike$ ../dostrace/debug/mzdiff ida/start.exe:0x17 build-f15-se2/start.exe:0x18 --verbose --loose --sdiff 3 --variant --map map/start.map
 Comparing code between reference (entrypoint 1000:0017/010017) and other (entrypoint 1000:0018/010018) executables
 --- Now @1000:0017/010017, routine 1000:0010-1000:0482/000473: main, block 010010-010482/000473, compared @1000:0018/010018
@@ -53,16 +52,16 @@ Comparing code between reference (entrypoint 1000:0017/010017) and other (entryp
 1000:0057/010057: les bx, [0x77f2]                 =~ 1000:0058/010058: les bx, [0x5cd]
 1000:005b/01005b: push es:[bx+0x1e]                == 1000:005c/01005c: push es:[bx+0x1e]
 1000:005f/01005f: call 0x2a88 (down)               ~= 1000:0060/010060: call 0x470 (down)
-1000:0062/010062: add sp, 0x2                      ~~ 1000:0063/010063: inc sp ❌❌❌
-                                                      1000:0064/010064: inc sp
+<o>1000:0062/010062: add sp, 0x2                      ~~ 1000:0063/010063: inc sp
+                                                      1000:0064/010064: inc sp</o>
 [...]
-1000:00a8/0100a8: sub ax, ax                       ~~ 1000:00a6/0100a6: xor ax, ax ❌❌❌ 
+<o>1000:00a8/0100a8: sub ax, ax                       ~~ 1000:00a6/0100a6: xor ax, ax</o>
 1000:00aa/0100aa: push ax                          == 1000:00a8/0100a8: push ax
 1000:00ab/0100ab: push ax                          == 1000:00a9/0100a9: push ax
 1000:00ac/0100ac: call far 0x16b50cac              ~= 1000:00aa/0100aa: call far 0x11c10286
-```
+</pre>
 
-The Turbo C compiler produces mismatches elsewhere in the code. Notably, after calling a function which takes a word-sized argument, it uses two `inc sp` instructions to take the argument off the stack where the original does `add sp,2`. The result is exactly the same, but there is a discrepancy. I have `mzdiff` running with the `--variant` option which I implemented to get around exactly this type of issue - it has a static lookup table of equivalent sequences of instructions and it displays the `~~` status to show that the add is equivalent to the two subequent increments. This happens when building the code with `-G` which enables favouring of fast code over small code - without it, it will emit `pop cx` instead, which also has the same result, but again, it's not the same instruction.
+The Turbo C compiler produces mismatches elsewhere in the code. Notably, after calling a function which takes a word-sized argument, it uses two `inc sp` instructions to take the argument off the stack where the original does `add sp,2`. The result is exactly the same, but there is a discrepancy. I have `mzdiff` running with the `--variant` option which I implemented to get around exactly this type of issue - it has a static lookup table of equivalent sequences of instructions and it displays the `~~` status and puts the instructions in a warning color to show that the add is equivalent to the two subequent increments. This happens when building the code with `-G` which enables favouring of fast code over small code - without it, it will emit `pop cx` instead, which also has the same result, but again, it's not the same instruction.
 
 Another discrepancy in the above output is that whenever a register needs to be zeroed in order to be pushed onto the stack as an argument, Turbo C emits `xor ax,ax` instead of the desired `sub ax,ax`. Again, same result and the tool obliges us with `~~`, but the instructions are different.
 
@@ -70,29 +69,29 @@ I again used my bruteforcing Python script to check various combinations of othe
 
 I utter naughty words. It's not the right compiler.
 
-There's still hope, there are more compilers to try, this was just the newest possible one. I went ahead and tested TC 1.0, 1.5 and 2.0 with the bruteforcing script, and manually. The results were exactly the same. It appears this is just what the Borland compilers do around function calls, and it's not configurable. 
+There's still hope, there are more compilers to try, this was just the newest possible one. I went ahead and tested TC 1.0, 1.5 and 2.0 manually, and with the bruteforcing script. The results were exactly the same. It appears this is just what the Borland compilers do around function calls, and it's not configurable. 
 
-Some weeks pass. Occasionally I try an idea, but nothing works. I implement options in the comparison tool to ignore a limited number of mismatching instructions, and continue with reconstructing the code instead of trying to get it to match. I am building the code with MSC 5.1. The tool shows yellow lines but at least I feel like I'm making progress. No point in getting hung up on this, I have a game to reconstruct. Good thing I have the tool, I can control what counts for a match in the comparison.
+Some weeks pass. Occasionally I try an idea, but nothing works. I implement options in the comparison tool to ignore a limited number of mismatching instructions, and continue with reconstructing the code instead of trying to get it to match perfectly. I am building the code with MSC 5.1. The tool shows warnings on the mismatches, but at least I feel like I'm making progress. No point in getting hung up on this, I have a game to reconstruct. Good thing I have the tool, I can control what counts for a match in the comparison.
 
 At some point, I get a flash. True that the original game was released in 1989, but I'm working with the updated scenario disk version. That one was released in 1991! This puts additional compilers on the table that I haven't tested yet:
 
 - Turbo C++ 1.0/1.01 (1990)
-- Turbo C++ 3.0 (1991). There was never a Turbo C++ 2.0, probably because Borland wanted its latest compiler to have a higher version number than the discontinued Turbo C 2.0.
+- Turbo C++ 3.0 (1991). There was never a Turbo C++ 2.0, probably because Borland wanted its latest compiler (which included C support) to have a higher version number than the discontinued Turbo C 2.0.
 - Borland C++ 2.0 (1991). Likewise, there never was a Borland C++ 1.0, probably for marketing reasons.
 - Borland C++ 3.0 (1991)
 - Microsoft C 6.0 (1990). This one is interesting because it supports inline assembly.
 
-I'll save you the suspense, none of these matched either. The Microsoft one has more optimization options but it still optimizes the loop branches away unless they are all disabled, in which case the code turns out as hot garbage.
+I'll save you the suspense, none of these matched either. The Microsoft one has more optimization options but it still optimizes unnecessary loop branches away unless the optimizations are all disabled, in which case the code turns out as hot garbage.
 
 TC++ 1.01 still uses `inc sp` and `xor ax,ax`. Interestingly, it also used `xor dx,dx` and pushed that as a zero value for the second function argument, while it had a zero in AX already. Go figure. It also needed the `-Z` option to prevent reloading a value that was already in a register, and `-Z` does not work unless `-O` is also specified, which enables loop optimization... which means my loop will come out too optimized again... Deadlocked.
 
-```
+<pre>
 1000:0039/010039: les bx, [bp-0x12]                =~ 1000:0039/010039: les bx, [bp-0x06] ; get far address value into ES:BX
 1000:003c/01003c: mov ax, es:[bx]                  == 1000:003c/01003c: mov ax, es:[bx]
 1000:003f/01003f: mov [0x77f4], ax                 ~= 1000:003f/01003f: mov [0x5d4], ax
 1000:0042/010042: mov word [0x77f2], 0x0           ~= 1000:0042/010042: mov word [0x5d2], 0x0
-1000:0048/010048: mov ax, es:[bx]                  != 1000:0048/010048: les bx, [bp-0x06] ❌❌❌ Address value gets reloaded
-```
+<r>1000:0048/010048: mov ax, es:[bx]                  != 1000:0048/010048: les bx, [bp-0x06]</r> (Address value gets reloaded)
+</pre>
 
 Turbo C++ 3.0 had a weird quirk where it would reload the far address value even with `-Z -O`. Could not get it to cooperate.
 
@@ -100,27 +99,27 @@ Borland C++ 2.0 behaves exactly like Turbo C++ 1.01. Needs `-Z -G -O` to prevent
 
 Borland C++ 3.0 is interesting. For one, with `-G` it uses `add sp,2` instead of 2x`inc sp`, which is good. But it still does the `xor ax,ax` thing for zeroing out regs. In addition, there are some subtle differences around register reuse around far addresses:
 
-```
+<pre>
 1000:0039/010039: les bx, [bp-0x12]                =~ 1000:0039/010039: les bx, [bp-0x06]
 1000:003c/01003c: mov ax, es:[bx]                  == 1000:003c/01003c: mov ax, es:[bx]
 1000:003f/01003f: mov [0x77f4], ax                 ~= 1000:003f/01003f: mov [0x5d4], ax
 1000:0042/010042: mov word [0x77f2], 0x0           ~= 1000:0042/010042: mov word [0x5d2], 0x0
-1000:0048/010048: mov ax, es:[bx]                  != 1000:0048/010048: mov [0x5d0], ax ❌❌❌ es:bx reused, AND ax reused 😵
+<o>1000:0048/010048: mov ax, es:[bx]                  != 1000:0048/010048: mov [0x5d0], ax</o> (es:bx reused, AND ax reused 😵)
 1000:004b/01004b: mov [0x4606], ax                 ~= 1000:0048/010048: mov [0x5d0], ax (tool skipped the mismatch)
 [...]
 1000:00c1/0100c1: les bx, [0x4604]                 =~ 1000:00be/0100be: les bx, [0x5ce]
 1000:00c5/0100c5: mov word es:[bx+0x4e], 0x1       == 1000:00c2/0100c2: mov word es:[bx+0x4e], 0x1
-1000:00cb/0100cb: les bx, [0x4604]                 != 1000:00c8/0100c8: mov word es:[bx+0x3e], 0xffff ❌❌❌ es:bx reused
+<o>1000:00cb/0100cb: les bx, [0x4604]                 != 1000:00c8/0100c8: mov word es:[bx+0x3e], 0xffff</o> (es:bx reused)
 1000:00cf/0100cf: mov word es:[bx+0x3e], 0xffff    == 1000:00c8/0100c8: mov word es:[bx+0x3e], 0xffff (next instruction matches)
-1000:00d5/0100d5: les bx, [0x4604]                 != 1000:00ce/0100ce: mov word es:[bx+0x38], 0xffff ❌❌❌ ditto
+<o>1000:00d5/0100d5: les bx, [0x4604]                 != 1000:00ce/0100ce: mov word es:[bx+0x38], 0xffff</o> (ditto)
 1000:00d9/0100d9: mov word es:[bx+0x38], 0xffff    == 1000:00ce/0100ce: mov word es:[bx+0x38], 0xffff (ditto)
-```
+</pre>
 
 I ran out of compilers to try. On one hand, the superfluous jumps feel uniquely Borland-ish. On the other, the `add sp,2` *and* `sub ax,ax` feels almost uniquely Microsofty. There does not appear to be a compiler which does both at the same time.
 
 Well, perhaps then the loop was written using the inline assembly feature of MSC 6.0? Come to think of it, this could be a good time to compare the 1989 version of the game with the 1991 one. Perhaps the loop is also there in the older version? Sure enough, here it is:
 
-```
+<pre>
 ninja@dell:eaglestrike$ ../dostrace/debug/mzdiff ida/start_new.exe:0x100 ida/start_old.exe:0xf9 --verbose --loose
 Comparing code between reference (entrypoint 1000:0100/010100) and other (entrypoint 1000:00f9/0100f9) executables
 --- Now @1000:0100/010100, compared @1000:00f9/0100f9
@@ -131,12 +130,12 @@ Comparing code between reference (entrypoint 1000:0100/010100) and other (entryp
 1000:0111/010111: or ax, ax                        == 1000:010a/01010a: or ax, ax
 1000:0113/010113: jnz 0x11c (down)                 ~= 1000:010c/01010c: jnz 0xfe (up)
 1000:0115/010115: call far 0x16b50c7f              ~= 1000:010e/01010e: call far 0x16ac0a3f
-1000:011a/01011a: jmp short 0x11e (down)           != 1000:0113/010113: cmp byte [0x52e], 0x78
+<r>1000:011a/01011a: jmp short 0x11e (down)           != 1000:0113/010113: cmp byte [0x52e], 0x78</r>
 ERROR: Instruction mismatch in routine unknown at 1000:011a/01011a: jmp short 0x11e != 1000:0113/010113: cmp byte [0x52e], 0x78
 --- Context information for 10 additional instructions after mismatch location:
 1000:011c/01011c: jmp short 0x105 (up)             ~= 1000:0118/010118: jb 0x16b (down)
 1000:011e/01011e: cmp byte [0x76e], 0x78           != 1000:011a/01011a: call far 0x16ac09d1
-```
+</pre>
 
 Because the versions have actual code differences (beyond what comes from using a different compiler), I'm pointing the tool to specific offsets in both to get them to converge, but the loop is present in both. The left one is the 1991 version, with the loop unoptimized like Borland can do. The one on the right is the 1989 version, optimized like MSC (or Borland with `-O`) would do. Elsewhere, both match up on register reuse, and usage of `add sp,2` and `sub ax,ax`. I'm pretty sure the 1989 version was actually built with MSC 5.1. Which means the loop could not have been written in inline assembly which is not supported in that compiler, unless they specifically rewrote it for the 1991 release, which I don't find likely.
 
