f15 overlays post minor tweak

--- a/_posts/2023-07-12-overlays.md
+++ b/_posts/2023-07-12-overlays.md
@@ -10,7 +10,7 @@ In the [initial post]({% post_url 2022-12-08-firstlook %}) about the game, I bri
 
 When launched, the game allocates a 320-paragraph (5KiB) buffer (which I call COMM in my code), and places its segment at address 0:4F0, which is the IACA, or Inter Application Communication Area. This is a rarely used, 16-byte sized area of the IBM PC low memory, and the game uses it to store the address of the shared buffer, as well as for some flags to exchange information between the executables that make up the game.
 
-The layout of the buffer is not fully known yet, but I have discovered some things. Among others, the filename of the selected graphics driver overlay is put at offset 0x0, and the sound driver overlay is at 0xd. After the game is launched, F15.COM will execute SU.EXE (SetUp) which displays a menu for the user to select the drivers (unless special commandline switches are used which preselect the drivers and bypass the menu). SU will place the filenames of the drivers in COMM and return to F15.COM, which will load the drivers (sound, video and the MISC.EXE driver) into memory using the DOS function [21.4b03](https://fd.lod.bz/rbil/interrup/dos_kernel/214b.html). This is an interesting call which will load an executable into memory and return its segment, but won't execute it. Good thing too, as the overlay exes are not meant to be executed, they are more like dynamically-loaded libraries containing a set of functions to be executed when necessary. Still, the game needs to know where these functions reside, and to that end the load modules of those executables contain a header of the following form:
+The layout of the buffer is not fully known yet, but I have discovered some things. Among others, the filename of the selected graphics driver overlay is put at offset 0x0, and the sound driver overlay is at 0xd. After the game is launched, F15.COM will execute SU.EXE (SetUp) which displays a menu for the user to select the drivers (unless special commandline switches are used which preselect the drivers and bypass the menu). SU will place the filenames of the drivers in COMM and return to F15.COM, which will load the drivers (sound, video and the MISC.EXE driver) into memory using the DOS function [21.4b03](https://fd.lod.bz/rbil/interrup/dos_kernel/214b.html). This [along with 21.4b01](https://retrocomputing.stackexchange.com/questions/25736/how-can-i-properly-execute-and-clean-up-after-a-dos-mz-executable-loaded-into-me) is an interesting call which will load an executable into preallocated memory, but won't execute it. Good thing too, as the overlay exes are not meant to be executed, they are more like dynamically-loaded libraries containing a set of functions to be executed when necessary. Still, the game needs to know where these functions reside, and to that end the load modules of those executables contain a header of the following form:
 
 {% highlight cpp %}
 // Microprose overlay header format
