--- a/_posts/2023-05-18-compiler2.md
+++ b/_posts/2023-05-18-compiler2.md
@@ -148,4 +148,4 @@ The silver lining is that I stil have a viable path forward. Here are my possibi
 3. I could potentially try the standalone versions of QuickC from 1.0 up to 2.51, and QuickC for Windows 1.0 which came out in 1991 and could still target DOS, although based on my experience with QC bundled with MSC 5.1, I don't think any of them are likely.
 4. An observant reader might have noticed that in my submarine picture in Part 1 there is Watcom hovering on the horizon. Versions 6.0 and 7.0 of the Watcom C/C++ compiler could emit real-mode 16bit code (the subsequent versions focused on protected mode of the 386), and Watcom was very popular with game developers, although I think it was mostly after the protected mode version was used to create _Doom_. Sadly, I could not find a copy of the 16bit version anywhere. The modern OpenWatcom project is also a possiblity.
 
-If I ever make a breakthrough on this, there might be a Part 3 of this post, but for now I'm going with option #1. I have `main()` of `START.EXE` fully reconstructed into "mostly matching" state, and am moving onto other functions, encountering difficulties along the way, but so far being able to overcome them. I'll write up more findings related to those in subsequent posts, but regarding the compiler, that's it for now.  Good fight, good night.
+If I ever make a breakthrough on this, there might be a [Part 3]({% post_url 2023-09-02-compiler3 %}) of this post, but for now I'm going with option #1. I have `main()` of `START.EXE` fully reconstructed into "mostly matching" state, and am moving onto other functions, encountering difficulties along the way, but so far being able to overcome them. I'll write up more findings related to those in subsequent posts, but regarding the compiler, that's it for now.  Good fight, good night.
