fix grammar and typos

--- a/_posts/2023-09-02-compiler3.md
+++ b/_posts/2023-09-02-compiler3.md
@@ -9,7 +9,7 @@ category: f15-se2
 
 After writing up the previous part of the story of the futile compiler chase, I was pretty burned out. I had tried every compiler and option that could have conceivably been used by whoever modified the code of F15 SE2 for the 1991 scenario disk update before producing the final build and turning it over to manufacturing, yet that search turned out fruitless. The opcodes smelled of MSC 5.1. But it could not be forced to emit the specific sequence of `jmp short` instructions that was present in the original. Borland compilers could, but they produced differences elsewhere that likewise could not be made to go away. A classic catch-22.
 
-I wanted to make progress on the reconstruction so I gave up on trying to make it perfect. I implemented options in the tool that I use for comparing my reconstruction with the binary, which let it skip a number of differing instructions in both executables and moved on. I was not very happy about it but I finished `main()` and moved on to other functions. I kept using MSC 5.1 because it seemed to produce the best matching code overall. Things seemed to be moving along until one day distaster struck. The next function to rewrite from assembly to C was supposed to be this one:
+I wanted to make progress on the reconstruction so I gave up on trying to make it perfect. I implemented options in the tool that I use for comparing my reconstruction with the binary, which let it skip a number of differing instructions in both executables and moved on. I was not very happy about it, but I was able to  finish `main()` and move on to other functions that way. I kept using MSC 5.1 because it seemed to produce the best matching code overall. Things seemed to be moving along until one day distaster struck. The next function to rewrite from assembly to C was supposed to be this one:
 
 {% highlight nasm %}
 waitMdaCgaStatus proc near
@@ -134,15 +134,15 @@ The problem this time is that it's not enough to skip a couple of instructions. 
 
 I need to go back and figure out which compiler was used and with what flags. Without having that part down, I'm screwed. So I catch a deep breath and dive into it again.
 
-First thing I tried was getting rid of the suspense and putting the Watcom question out of the way. I could not locate a copy of Watcom C 6.0/7.0 which appear to best match the release date of the game, so I tried the next best thing with [OpenWatcom](http://open-watcom.github.io/). Hopefully they did not change the code generation too much in 30+ years? The code it produced didn't look close at all. I tried several optimization variants but there were just too many differences all over. I particular, `test ax,ax` was used instead of `or ax,ax`, multiple registers were pushed in preambles of functions, arithmetic registers were used instead of immediate values in instructions etc. Scratch that off, at least until I can find a copy of the old version, but I don't thing it's a likely target.
+First thing I tried was getting rid of the suspense and putting the Watcom question out of the way. I could not locate a copy of Watcom C 6.0/7.0 which appear to best match the release date of the game, so I tried the next best thing with [OpenWatcom](http://open-watcom.github.io/). Hopefully they did not change the code generation too much in 30+ years? The code it produced didn't look close at all. I tried several optimization variants but there were just too many differences all over. I particular, `test ax,ax` was used instead of `or ax,ax`, multiple registers were pushed in preambles of functions, arithmetic registers were used instead of immediate values in instructions etc. Scratch that off, at least until I can find a copy of the old version, but I don't think it's a likely target.
 
-The standalone versions of [QuickC](https://en.wikipedia.org/wiki/QuickC) are still on the table. Version 1.01 was bundled with MSC 5.1 and I tried it in Part 2, but it produced horribly unoptimized code. Wikipedia says that QuickC was introduced as Microsoft's answer to Borland's Turbo C - an enthusiast-oriented compiler that is cheaper and a step down from the big-boy MSC. Turbo C produces quite neat code, so maybe the 2.x releases of Quick C are somewhat better if they want to compete with it? But at the same time not too good, lest I end up with the same problems as with using the full-featured MSC right now. No luck again, with no optimization flags it uses `mov ax,0` instead of `sub ax,ax` which  need. With `/Ot` it uses `xor ax,ax` (and signedness of the argument it's creating does not matter). It also puts a `jmp short` to a loop condition at the end and does some other weird stuff. It's not the right one.
+The standalone versions of [QuickC](https://en.wikipedia.org/wiki/QuickC) are still on the table. Version 1.01 was bundled with MSC 5.1 and I tried it in Part 2, but it produced horribly unoptimized code. Wikipedia says that QuickC was introduced as Microsoft's answer to Borland's Turbo C - an enthusiast-oriented compiler that is cheaper and a step down from the big-boy MSC. Turbo C produces quite neat code, so maybe the 2.x releases of Quick C are somewhat better if they want to compete with Turbo C? But at the same time it shoud not be too good, or I will end up with the same problems as with using the full-featured MSC right now. Well, no luck again, with no optimization flags it uses `mov ax,0` instead of `sub ax,ax` which  need. With `/Ot` it uses `xor ax,ax` (and signedness of the argument it's creating does not matter). It also puts a `jmp short` to a loop condition at the end and does some other weird stuff. It's not the right one.
 
-I had already tried MSC 5.0, 4.0 and 3.0 in hope that they perhaps differ somewhat in their generation of optimized code, but it turned out not to be the case. The difference is main in the language feature set supported by the newer versions - in particular, the older versions required function definitions to follow the ancient K&R style and were missing library functions which are now considered standard, but they still optimize loops in exactly the same way. MSC 2.0 is a different case however. It is basically a rebranding of the [Lattice C](https://en.wikipedia.org/wiki/Lattice_C) compiler before Microsoft made their own thing with 3.0, so I was expecting its output to differ. Rightly so, it turned out, however again - not in the way I needed. It put the outer loop condition in the expected place, but the jump sequence was all wrong, more like QuickC with optimizations disabled. This was an interesting excursion, however. I never worked with a compiler which did not support the `void` type before. Also, there were some limitations on the use of whitespace, and the compiler itself worked in two passes. There are two executables, `MC1.EXE` and `MC2.EXE`. The output of the first is a `.Q` or "quad" file, and the other turns it into the expected `.OBJ`. 
+I had already tried MSC 5.0, 4.0 and 3.0 in hope that they perhaps differ somewhat in their generation of optimized code, but it turned out not to be the case. The difference is mainly in the language feature set supported by the newer versions - in particular, the older versions required function definitions to follow the ancient K&R style and were missing library functions which are now considered standard, but they still optimize loops in exactly the same way. MSC 2.0 is a different case however. It is basically a rebranding of the [Lattice C](https://en.wikipedia.org/wiki/Lattice_C) compiler before Microsoft made their own thing with 3.0, so I was expecting its output to differ. Rightly so, it turned out, however again - not in the way I needed. It put the outer loop condition in the expected place, but the jump sequence was all wrong, more like QuickC with optimizations disabled. This was an interesting excursion, however. I never worked with a compiler which did not support the `void` type before. Also, there were some limitations on the use of whitespace, and the compiler itself worked in two passes. There are two executables, `MC1.EXE` and `MC2.EXE`. The output of the first is a `.Q` or "quad" file, and the other turns it into the expected `.OBJ`. 
 
-Now I'm really out of things to try. I mean, let's be honest, nobody at Microprose decided it would be a good idea to use a completely different compiler for a codebase that they're just trying to tweak quickly and make a quick buck off of before the game is too old. So, no Digital Mars, DeSmet or any other such exotics. But maybe still Turbo C? Maybe I missed something. I spent some time trying to beat Borland C++ 3.0 and Turbo C 2.0 into submission, since the output of those looked most promising. I lost and got a beating instead, same with MSC 6.0 revisited.
+Now I'm really out of things to try. I mean, let's be realistic, nobody at Microprose would decide it was a good idea to use an exotic compiler for a codebase that they're just trying to tweak quickly and make a quick buck off of before the game is too old. So, no [Digital Mars](https://digitalmars.com/download/freecompiler.html), [DeSmet](http://www.desmet-c.com/) or anything of that sort. But maybe still Turbo C? Maybe I missed something. I spent some time trying to beat Borland C++ 3.0 and Turbo C 2.0 into submission again, since the output of those looked most promising. I lost and got a beating instead, same with MSC 6.0 revisited.
 
-I was getting desperate, so I started reaching out to ex-Microprose employees that did not even work on F15 SE2 because I can't get in touch with Andy Hollis. But I was hoping I would learn something about how things were done at the company that could put me on the right track. Here's what I was told by a person who worked on [F117](https://en.wikipedia.org/wiki/F-117A_Nighthawk_Stealth_Fighter_2.0), which was the next iteration of the same engine after F15 SE2 (which itself built on top of F19):
+I was getting desperate, so I started reaching out to ex-Microprose employees that did not even work on F15 SE2 because I can't get in touch with Andy Hollis. I was hoping I would learn something about how things were done at the company that could put me on the right track. Here's what I was told by a person who worked on [F117](https://en.wikipedia.org/wiki/F-117A_Nighthawk_Stealth_Fighter_2.0), which was the next iteration of the same engine after F15 SE2 (which itself built on top of F19):
 
 1. There was definitely no C++ used on the project. I was already suspecting as much, but it's good to have it confirmed, because C++ would have complicated things.
 2. [Sid](https://en.wikipedia.org/wiki/Sid_Meier) liked gotos. The mission generation code used gotos extensively. Good thing to know, the code could diverge from the clean patterns of control that pure C provides and I'll know that a goto is always an option.
@@ -228,4 +228,4 @@ The commit history on my git repo for the reconstruction shows that I first hit 
 
 So, did I just "waste" 5 months? No, I don't think so. I learned a lot about how the compiler works and got a feel for the flow of opcodes and how they map to C code. I can now write easier conditions or loops as I read them. I can tell optimized from unoptimized code at a glance. It was extremely frustrating for a while, but the sense of satisfaction I got from finally finding the magic flag that somebody forgot to disable before making the final build is proportionally exhilarating. I managed to uncover a cool fact about the game, and it being build in debug mode means the instructions will be likely easier to follow.
 
-It's my own fault really for not RTFM'ing more carefully and assuming only the `/O` options could influence optimizations. I recall searching it for all occurences of "optimization" at some point, but this is a scanned document and text search does not always work on it. Or maybe it did find the occurence, but I glossed over it after seeing "symbols"? Well, no point in wondering now. The project is back on track, I'm churning out functions like mad. I'm looking forward to being done with `START.EXE` and moving onto `EGAME.EXE` in the near future.
+It's my own fault really for not RTFM'ing more carefully and assuming only the `/O` options could influence optimizations, but you have to admit that the option descriptions in the output of the compiler are misleading, to put it mildly. I recall searching the manual for all occurences of "optimization" at some point, but this is a scanned document and text search does not always work on it. Or maybe it did find the occurence, but I glossed over it after seeing "symbols"? Well, no point in wondering now. The project is back on track, I'm churning out functions like mad. I'm looking forward to being done with `START.EXE` and moving onto `EGAME.EXE` in the near future.
